--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2024 Mayuri Sampathgiri. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Mayuri Sampathgiri</p>
     </footer>
     <script src="script.js"></script>
   </body>
