removed p4 becuase github private

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
+          <!-- <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-4.png"
@@ -325,7 +325,7 @@
                 Github
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <img
