updated some structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="icon"  type="image/png" href="assets\vlogger.png">
+    <link rel="icon"  type="image/png" href="assets/vlogger.png">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -46,10 +46,7 @@
         <h1 class="title">Mayuri Sampathgiri</h1>
         <p class="section__text__p2">AI Engineer</p>
         <div class="btn-container">
-          <button
-            class="btn btn-color-2"
-            onclick="window.open('./assets/Mayuri-resume.pdf')"
-          >
+          <button class="btn btn-color-2" onclick="window.open('./assets/Mayuri-resume.pdf')">
             Download CV
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -57,18 +54,8 @@
           </button>
         </div>
         <div id="socials-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="My LinkedIn profile"
-            class="icon"
-            onclick="location.href='https://linkedin.com/in/mayurisampathgiri'"
-          />
-          <img
-            src="./assets/github.png"
-            alt="My Github profile"
-            class="icon"
-            onclick="location.href='https://github.com/mayurisampathgiri'"
-          />
+          <img src="./assets/linkedin.png" alt="LinkedIn profile" class="icon" onclick="location.href='https://linkedin.com/in/mayurisampathgiri'" />
+          <img src="./assets/github.png" alt="Github profile" class="icon" onclick="location.href='https://github.com/mayurisampathgiri'" />
         </div>
       </div>
     </section>
@@ -111,10 +98,10 @@
               I am driven by a passion for leveraging technology to solve complex problems 
               and create innovative solutions. My academic journey has equipped me with a 
               solid foundation in data structures, algorithms, software development, 
-              and data analysis. Currently, I am focused on learning AI models and 
+              and data analysis. I am currently focused on learning AI models and 
               large language models (LLMs) to deepen my understanding and expertise 
-              in machine learning. My goal is to apply these skills to develop efficient, 
-              scalable solutions that make a positive impact. I am excited to contribute my 
+              in machine learning. My goal is to develop efficient, 
+              scalable solutions that make a positive impact on society. I am eager to contribute my 
               technical expertise and problem-solving abilities to a dynamic and forward-thinking team.
             </p>
           </div>
@@ -142,13 +129,13 @@
                 </div>
               </article>
               <article>
-                <img src="./assets/checkmark.png" alt="Experience icon"class="icon"/>
+                <img src="./assets/checkmark.png"alt="Experience icon"class="icon"/>
                 <div>
                   <h3>Java</h3><p>Intermediate</p>
                 </div>
               </article>
               <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                <img src="./assets/checkmark.png"alt="Experience icon"class="icon"/>
                 <div>
                   <h3>HTML/CSS</h3><p>Intermediate</p>
                 </div>
@@ -162,7 +149,7 @@
               <article>
                 <img src="./assets/checkmark.png"alt="Experience icon"class="icon"/>
                 <div>
-                  <h3>SQL & NoSQL </h3><p>Intermediate</p>
+                  <h3>SQL & NoSQL</h3><p>Intermediate</p>
                 </div>
               </article>
             </div>
@@ -201,15 +188,12 @@
                   <p>Intermediate</p>
                 </div>
               </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png" alt="Experience icon" class="icon"
-                />
+              <!-- <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
-                  <h3>Excel for analysis</h3>
-                  <p>Basic</p>
+                  <h3>Excel for analysis</h3><p>Basic</p>
                 </div>
-              </article>
+              </article> -->
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -245,7 +229,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Yelp Reviews - Sentimental Analysis</h2>
+            <h2 class="experience-sub-title project-title">Sentimental Analysis</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -269,7 +253,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Minesweeper Classic</h2>
+            <h2 class="experience-sub-title project-title">Minesweeper Game</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
