--- a/index.html
+++ b/index.html
@@ -279,38 +279,26 @@
             </div>
             <h2 class="experience-sub-title project-title">News API</h2>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/mayurisampathgiri/news-api'"
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/mayurisampathgiri/news-api'"
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/mayurisampathgiri/news-api#screenshots'"
-              >
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/mayurisampathgiri/news-api#screenshots'">
                 Screenshots
               </button>
             </div>
           </div>
-          <!-- <div class="details-container color-container">
+          <div class="details-container color-container">
             <div class="article-container">
-              <img
-                src="./assets/project-4.png"
-                alt="Project 4"
-                class="project-img"
-              />
+              <img src="./assets/project-4.png" alt="Project 4" class="project-img" />
             </div>
             <h2 class="experience-sub-title project-title">Green Card Renewal Project</h2><p>Access given upon request</p>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/mayurisampathgiri/CS321_final'"
-              >
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/mayurisampathgiri/CS321_final'" >
                 Github
               </button>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
       <img
