--- a/index.html
+++ b/index.html
@@ -269,6 +269,14 @@
               </button>
             </div>
           </div>
+        </div>
+      </div>
+      <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
+    </section>
+    <br><br>
+    <section id = "projects">
+      <div class="experience-details-container">
+        <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -301,12 +309,7 @@
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
+      <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
