--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>Software Engineering Fellow @ Headstarter AI (Current)<br/>Python Web Developer (Aug 2023)<br/>Statistical Learning Assistant (2022)</p>
+              <p>AI Engineer Intern @ DigitalQ (Current)<br/>Python Web Developer (Aug 2023)<br/>Statistical Learning Assistant (2022)</p>
               <p></p>
             </div>
           </div>
